--- a/passvault-client/src/main/java/org/passvault/client/vault/VaultForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/vault/VaultForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.passvault.client.vault.VaultForm">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="5" bottom="5" right="5"/>
     <constraints>
       <xy x="20" y="20" width="660" height="453"/>
@@ -13,7 +13,7 @@
     <children>
       <splitpane id="46b6f" binding="splitPane">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -39,7 +39,7 @@
                   <inheritsPopupMenu value="false"/>
                   <verticalScrollBarPolicy value="22"/>
                 </properties>
-                <border type="none" title="Items"/>
+                <border type="none" title="Entries"/>
                 <children>
                   <component id="92b80" class="org.passvault.client.vault.EntriesList" binding="entriesList" custom-create="true">
                     <constraints/>
@@ -98,6 +98,45 @@
           </scrollpane>
         </children>
       </splitpane>
+      <toolbar id="8252f">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="20"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="1ec0a" class="javax.swing.JButton" binding="openButton">
+            <constraints/>
+            <properties>
+              <text value="Open"/>
+            </properties>
+          </component>
+          <component id="9fe88" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Save"/>
+            </properties>
+          </component>
+          <component id="13827" class="javax.swing.JButton" binding="saveAsButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Save As"/>
+            </properties>
+          </component>
+          <component id="db910" class="javax.swing.JToolBar$Separator">
+            <constraints/>
+            <properties/>
+          </component>
+          <component id="4362a" class="javax.swing.JButton" binding="passwordGeneratorButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Password Generator"/>
+            </properties>
+          </component>
+        </children>
+      </toolbar>
     </children>
   </grid>
 </form>
